src/styles/global.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
    :root {
        --gray-1: 242 242 247;
        --gray-2: 229 229 234;
        --gray-3: 209 209 214;
        --gray-4: 199 199 204;
        --gray-5: 174 174 178;
        --gray-6: 142 142 147;
        --gray-7: 99 99 102;
        --gray-8: 72 72 74;
        --gray-9: 58 58 60;
        --gray-10: 44 44 46;
        --gray-11: 28 28 30;

        --background: var(--gray-11);
        --content: var(--gray-1);
        --primary: 41 151 255;

        --red: 255 49 48;
        --orange: 255 149 0;
        --yellow: 255 204 0;
        --green: 40 205 65;
        --mint: 0 199 190;
        --teal: 89 173 196;
        --cyan: 85 190 240;
        --blue: 0 122 255;
        --indigo: 88 86 214;
        --purple: 175 82 222;
        --pink: 255 45 85;
        --brown: 162 132 94;
    }

    [data-color-mode='light'] :root {
        --red: 255 49 48;
        --orange: 255 149 0;
        --yellow: 255 204 0;
        --green: 40 205 65;
        --mint: 0 199 190;
        --teal: 89 173 196;
        --cyan: 85 190 240;
        --blue: 0 122 255;
        --indigo: 88 86 214;
        --purple: 175 82 222;
        --pink: 255 45 85;
        --brown: 162 132 94;
    }

    [data-color-mode='light'] {
        --background: var(--gray-1);
        --content: var(--gray-11);
        --primary: 0 102 204;
    }

    [data-color-mode='light'] .overlay {
        background-image: none;
    }

    [data-color-mode='dark'] #content {
        @apply prose-invert
    }

    [data-color-mode='dark'] .light {
        display: none;
    }

    [data-color-mode='light'] .light {
        display: block;
    }

    [data-color-mode='light'] .dark {
        display: none;
    }

    [data-color-mode='dark'] .dark {
        display: block;
    }

    .dark, .light {
        pointer-events: none;
    }

    .themeToggle {
        transition: 0.15s ease-in;
    }

    .themeIcon {
        animation: themeToggle 1200ms ease-out forwards;
    }

    @keyframes themeToggle {
        0% {
            transform: rotate(0deg);
        }

        40% {
            transform: rotate(390deg);
        }

        50% {
            transform: rotate(345deg);
        }

        65% {
            transform: rotate(370deg);
        }

        85% {
            transform: rotate(350deg);
        }

        100% {
            transform: rotate(360deg);
        }
    }
    
    strong {
        color: inherit;
    }

    html {
        color-scheme: dark;
    }

    a[href] {
        color: rgb(var(--primary));
    }

    a[href]:visited {
        color: rgb(var(--purple));
    }

    a[href]:hover,
    a[href]:focus {
        text-decoration: rgb(var(--primary)) underline;
    }

    a, button {
        touch-action: manipulation;
        -webkit-transform: translate3d(0, 0, 0);
    }

    #logo {
        color: rgb(var(--content));
        text-decoration: none;
    }

    .hr-bg {
        background-color: rgb(var(--gray-10));
    }

    [data-color-mode='light'] .hr-bg {
        background-color: rgb(var(--gray-2));
    }
}

::selection {
    background-color: rgb(var(--blue) / 20%);
    color: rgb(var(--content));
}

#body {
    /* background-image:
        radial-gradient(rgb(31, 31, 31) 10.4%, transparent 10.4%),
        radial-gradient(rgb(31, 31, 31) 10.4%, transparent 10.4%);
    background-position: 0px 0px, 20px 20px;
    background-size: 40px 40px;
    background-color: rgb(var(--background)); */
}

.overlay {
    position: absolute;
    inset: 0;
    height: 100%;
    width: 100%;
    background-image: url('/noise.png');
    opacity: 0.02;
    pointer-events: none;
}

#bio {
    text-wrap: balance;
}

